fix star scale labels

--- a/indi_allsky/flask/templates/focus.html
+++ b/indi_allsky/flask/templates/focus.html
@@ -364,6 +364,7 @@ function init() {
             },
             {
                 label: 'Stars',
+                yAxisID: 'y2',
                 pointRadius: 3,
                 backgroundColor: "rgba(75, 75, 192, 1)",
                 borderColor: "rgba(75, 75, 128, 1)",
@@ -405,6 +406,7 @@ function init() {
                     }
                 },
                 y2: {
+                    id: 'y2',
                     position: 'right',
                     beginAtZero:true,
                     grid: {
