--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -5406,6 +5406,48 @@ var camera_id = {{ camera_id }};
         </div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__ECOWITT_APIKEY.label(class='col-form-label') }}
+
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEMP_SENSOR__ECOWITT_APIKEY(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__ECOWITT_APIKEY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div></div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__ECOWITT_APPLICATIONKEY.label(class='col-form-label') }}
+
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEMP_SENSOR__ECOWITT_APPLICATIONKEY(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__ECOWITT_APPLICATIONKEY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div></div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__ECOWITT_MACADDRESS.label(class='col-form-label') }}
+
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEMP_SENSOR__ECOWITT_MACADDRESS(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__ECOWITT_MACADDRESS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div></div>
+        </div>
+    </div>
+
     <hr>
 
     <div class="form-group row">
@@ -6990,6 +7032,9 @@ const field_names = [
     'TEMP_SENSOR__AMBIENTWEATHER_APIKEY',
     'TEMP_SENSOR__AMBIENTWEATHER_APPLICATIONKEY',
     'TEMP_SENSOR__AMBIENTWEATHER_MACADDRESS',
+    'TEMP_SENSOR__ECOWITT_APIKEY',
+    'TEMP_SENSOR__ECOWITT_APPLICATIONKEY',
+    'TEMP_SENSOR__ECOWITT_MACADDRESS',
     'TEMP_SENSOR__MQTT_TRANSPORT',
     'TEMP_SENSOR__MQTT_HOST',
     'TEMP_SENSOR__MQTT_PORT',
