--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -6113,7 +6113,7 @@ var camera_id = {{ camera_id }};
             <div id="DEW_HEATER__THOLD_DIFF_LOW-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>If the difference is above the LOW threshold, the default level is used</div>
+            <div>If the delta is above the LOW threshold, the default level is used</div>
             <div><b>Current Target: {{ dh_target_low_str }}</b></div>
         </div>
     </div>
@@ -6306,7 +6306,7 @@ var camera_id = {{ camera_id }};
             <div id="FAN__THOLD_DIFF_LOW-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>If the difference is below the LOW threshold, the default level is used</div>
+            <div>If the delta is below the LOW threshold, the default level is used</div>
             <div><b>Current Target: {{ fan_target_low_str }}</b></div>
         </div>
     </div>
