--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -6114,7 +6114,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">
             <div>If the delta is above the LOW threshold, the default level is used</div>
-            <div><b>Current Target: {{ dh_target_low_str }}</b></div>
+            <div><b>Low Threshold: {{ dh_target_low_str }}</b></div>
         </div>
     </div>
 
@@ -6127,7 +6127,7 @@ var camera_id = {{ camera_id }};
             <div id="DEW_HEATER__THOLD_DIFF_MED-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div><b>Current Target: {{ dh_target_med_str }}</b></div>
+            <div><b>Medium Threshold: {{ dh_target_med_str }}</b></div>
         </div>
     </div>
 
@@ -6140,7 +6140,7 @@ var camera_id = {{ camera_id }};
             <div id="DEW_HEATER__THOLD_DIFF_HIGH-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div><b>Current Target: {{ dh_target_high_str }}</b></div>
+            <div><b>High Threshold: {{ dh_target_high_str }}</b></div>
         </div>
     </div>
 
@@ -6307,7 +6307,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">
             <div>If the delta is below the LOW threshold, the default level is used</div>
-            <div><b>Current Target: {{ fan_target_low_str }}</b></div>
+            <div><b>Low Threshold: {{ fan_target_low_str }}</b></div>
         </div>
     </div>
 
@@ -6320,7 +6320,7 @@ var camera_id = {{ camera_id }};
             <div id="FAN__THOLD_DIFF_MED-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div><b>Current Target: {{ fan_target_med_str }}</b></div>
+            <div><b>Medium Threshold: {{ fan_target_med_str }}</b></div>
         </div>
     </div>
 
@@ -6333,7 +6333,7 @@ var camera_id = {{ camera_id }};
             <div id="FAN__THOLD_DIFF_HIGH-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div><b>Current Target: {{ fan_target_high_str }}</b></div>
+            <div><b>High Threshold: {{ fan_target_high_str }}</b></div>
         </div>
     </div>
 
