--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3974,13 +3974,13 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_IMAGE_NAME.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-5">
             {{ form_config.FILETRANSFER__REMOTE_IMAGE_NAME(class='form-control bg-secondary') }}
             <div id="FILETRANSFER__REMOTE_IMAGE_NAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-7">
+        <div class="col-sm-5">
             <div>Remote image name. "{0}" is replaced with the configured image type extension.</div>
-            <div>Available variables: <pre>timestamp, ts, ext</pre></div>
+            <div>Available variables: <pre>timestamp, ts, ext, camera_uuid, camera_id, timeofday, tod</pre></div>
             <div><a href="https://docs.python.org/3/library/string.html#formatspec" class="text-decoration-none link-info" target="_blank">Python format syntax</a></div>
             <div><a href="https://docs.python.org/3/library/datetime.html#strftime-and-strptime-format-codes" class="text-decoration-none link-info" target="_blank">Python datetime format codes</a></div>
         </div>
@@ -3990,13 +3990,13 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_IMAGE_FOLDER.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
             {{ form_config.FILETRANSFER__REMOTE_IMAGE_FOLDER(class='form-control bg-secondary') }}
             <div id="FILETRANSFER__REMOTE_IMAGE_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-5">
             <div>Remote folder to store images</div>
-            <div>Available variables: <pre>timestamp, ts, camera_uuid, day_date</pre></div>
+            <div>Available variables: <pre>timestamp, ts, day_date, camera_uuid, camera_id, timeofday, tod</pre></div>
         </div>
     </div>
 
@@ -4006,11 +4006,11 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_PANORAMA_NAME.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-5">
             {{ form_config.FILETRANSFER__REMOTE_PANORAMA_NAME(class='form-control bg-secondary') }}
             <div id="FILETRANSFER__REMOTE_PANORAMA_NAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-7">
+        <div class="col-sm-5">
         </div>
     </div>
 
@@ -4018,13 +4018,13 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_PANORAMA_FOLDER.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
             {{ form_config.FILETRANSFER__REMOTE_PANORAMA_FOLDER(class='form-control bg-secondary') }}
             <div id="FILETRANSFER__REMOTE_PANORAMA_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-5">
             <div>Remote folder to store images</div>
-            <div>Available variables: <pre>timestamp, ts, camera_uuid, day_date</pre></div>
+            <div>Available variables: <pre>timestamp, ts, day_date, camera_uuid, camera_id, timeofday, tod</pre></div>
         </div>
     </div>
 
@@ -4034,115 +4034,225 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_METADATA_NAME.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-5">
             {{ form_config.FILETRANSFER__REMOTE_METADATA_NAME(class='form-control bg-secondary') }}
             <div id="FILETRANSFER__REMOTE_METADATA_NAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-7">Remote metadata file name.</div>
+        <div class="col-sm-5">Remote metadata file name.</div>
     </div>
 
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_METADATA_FOLDER.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
             {{ form_config.FILETRANSFER__REMOTE_METADATA_FOLDER(class='form-control bg-secondary') }}
             <div id="FILETRANSFER__REMOTE_METADATA_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-6">Remote folder to store metadata</div>
+        <div class="col-sm-5">Remote folder to store metadata</div>
     </div>
 
     <hr>
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__REMOTE_RAW_NAME.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-5">
+            {{ form_config.FILETRANSFER__REMOTE_RAW_NAME(class='form-control bg-secondary') }}
+            <div id="FILETRANSFER__REMOTE_RAW_NAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-5">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_RAW_FOLDER.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
             {{ form_config.FILETRANSFER__REMOTE_RAW_FOLDER(class='form-control bg-secondary') }}
             <div id="FILETRANSFER__REMOTE_RAW_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-6">Remote folder to store RAW images</div>
+        <div class="col-sm-5">Remote folder to store RAW images</div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__REMOTE_FITS_NAME.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-5">
+            {{ form_config.FILETRANSFER__REMOTE_FITS_NAME(class='form-control bg-secondary') }}
+            <div id="FILETRANSFER__REMOTE_FITS_NAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-5">
+        </div>
     </div>
 
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_FITS_FOLDER.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
             {{ form_config.FILETRANSFER__REMOTE_FITS_FOLDER(class='form-control bg-secondary') }}
             <div id="FILETRANSFER__REMOTE_FITS_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-6">Remote folder to store FITS images</div>
+        <div class="col-sm-5">Remote folder to store FITS images</div>
     </div>
 
     <hr>
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__REMOTE_VIDEO_NAME.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-5">
+            {{ form_config.FILETRANSFER__REMOTE_VIDEO_NAME(class='form-control bg-secondary') }}
+            <div id="FILETRANSFER__REMOTE_VIDEO_NAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-5">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_VIDEO_FOLDER.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
             {{ form_config.FILETRANSFER__REMOTE_VIDEO_FOLDER(class='form-control bg-secondary') }}
             <div id="FILETRANSFER__REMOTE_VIDEO_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-6">Remote folder to store timelapse videos</div>
+        <div class="col-sm-5">Remote folder to store timelapse videos</div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__REMOTE_MINI_VIDEO_NAME.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-5">
+            {{ form_config.FILETRANSFER__REMOTE_MINI_VIDEO_NAME(class='form-control bg-secondary') }}
+            <div id="FILETRANSFER__REMOTE_MINI_VIDEO_NAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-5">
+        </div>
     </div>
 
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_MINI_VIDEO_FOLDER.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
             {{ form_config.FILETRANSFER__REMOTE_MINI_VIDEO_FOLDER(class='form-control bg-secondary') }}
             <div id="FILETRANSFER__REMOTE_MINI_VIDEO_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-6">Remote folder to store mini timelapse videos</div>
+        <div class="col-sm-5">Remote folder to store mini timelapse videos</div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__REMOTE_KEOGRAM_NAME.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-5">
+            {{ form_config.FILETRANSFER__REMOTE_KEOGRAM_NAME(class='form-control bg-secondary') }}
+            <div id="FILETRANSFER__REMOTE_KEOGRAM_NAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-5">
+        </div>
     </div>
 
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_KEOGRAM_FOLDER.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
             {{ form_config.FILETRANSFER__REMOTE_KEOGRAM_FOLDER(class='form-control bg-secondary') }}
             <div id="FILETRANSFER__REMOTE_KEOGRAM_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-6">Remote folder to store keograms</div>
+        <div class="col-sm-5">Remote folder to store keograms</div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__REMOTE_STARTRAIL_NAME.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-5">
+            {{ form_config.FILETRANSFER__REMOTE_STARTRAIL_NAME(class='form-control bg-secondary') }}
+            <div id="FILETRANSFER__REMOTE_STARTRAIL_NAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-5">
+        </div>
     </div>
 
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_STARTRAIL_FOLDER.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
             {{ form_config.FILETRANSFER__REMOTE_STARTRAIL_FOLDER(class='form-control bg-secondary') }}
             <div id="FILETRANSFER__REMOTE_STARTRAIL_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-6">Remote folder to store star trails</div>
+        <div class="col-sm-5">Remote folder to store star trails</div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__REMOTE_STARTRAIL_VIDEO_NAME.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-5">
+            {{ form_config.FILETRANSFER__REMOTE_STARTRAIL_VIDEO_NAME(class='form-control bg-secondary') }}
+            <div id="FILETRANSFER__REMOTE_STARTRAIL_VIDEO_NAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-5">
+        </div>
     </div>
 
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_STARTRAIL_VIDEO_FOLDER.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
             {{ form_config.FILETRANSFER__REMOTE_STARTRAIL_VIDEO_FOLDER(class='form-control bg-secondary') }}
             <div id="FILETRANSFER__REMOTE_STARTRAIL_VIDEO_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-6">Remote folder to store star trail videos</div>
+        <div class="col-sm-5">Remote folder to store star trail videos</div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__REMOTE_PANORAMA_VIDEO_NAME.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-5">
+            {{ form_config.FILETRANSFER__REMOTE_PANORAMA_VIDEO_NAME(class='form-control bg-secondary') }}
+            <div id="FILETRANSFER__REMOTE_PANORAMA_VIDEO_NAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-5">
+        </div>
     </div>
 
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_PANORAMA_VIDEO_FOLDER.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
             {{ form_config.FILETRANSFER__REMOTE_PANORAMA_VIDEO_FOLDER(class='form-control bg-secondary') }}
             <div id="FILETRANSFER__REMOTE_PANORAMA_VIDEO_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-6">Remote folder to store panorama videos</div>
+        <div class="col-sm-5">Remote folder to store panorama videos</div>
     </div>
+
+    <hr>
 
     <div class="form-group row">
         <div class="col-sm-2">
@@ -6905,18 +7015,26 @@ const field_names = [
     'FILETRANSFER__CONNECT_TIMEOUT',
     'FILETRANSFER__TIMEOUT',
     'FILETRANSFER__REMOTE_IMAGE_NAME',
-    'FILETRANSFER__REMOTE_PANORAMA_NAME',
     'FILETRANSFER__REMOTE_IMAGE_FOLDER',
+    'FILETRANSFER__REMOTE_PANORAMA_NAME',
     'FILETRANSFER__REMOTE_PANORAMA_FOLDER',
+    'FILETRANSFER__REMOTE_PANORAMA_VIDEO_NAME',
     'FILETRANSFER__REMOTE_PANORAMA_VIDEO_FOLDER',
     'FILETRANSFER__REMOTE_METADATA_NAME',
     'FILETRANSFER__REMOTE_METADATA_FOLDER',
+    'FILETRANSFER__REMOTE_RAW_NAME',
     'FILETRANSFER__REMOTE_RAW_FOLDER',
+    'FILETRANSFER__REMOTE_FITS_NAME',
     'FILETRANSFER__REMOTE_FITS_FOLDER',
+    'FILETRANSFER__REMOTE_VIDEO_NAME',
     'FILETRANSFER__REMOTE_VIDEO_FOLDER',
+    'FILETRANSFER__REMOTE_MINI_VIDEO_NAME',
     'FILETRANSFER__REMOTE_MINI_VIDEO_FOLDER',
+    'FILETRANSFER__REMOTE_KEOGRAM_NAME',
     'FILETRANSFER__REMOTE_KEOGRAM_FOLDER',
+    'FILETRANSFER__REMOTE_STARTRAIL_NAME',
     'FILETRANSFER__REMOTE_STARTRAIL_FOLDER',
+    'FILETRANSFER__REMOTE_STARTRAIL_VIDEO_NAME',
     'FILETRANSFER__REMOTE_STARTRAIL_VIDEO_FOLDER',
     'FILETRANSFER__REMOTE_ENDOFNIGHT_FOLDER',
     'FILETRANSFER__UPLOAD_IMAGE',
