add long term keogram to navigation

--- a/indi_allsky/flask/templates/base.html
+++ b/indi_allsky/flask/templates/base.html
@@ -94,6 +94,10 @@
                                 <a href="{{ url_for('indi_allsky.fitsimageviewer_view') }}" class="dropdown-item">
                                     <img src="{{ url_for('indi_allsky.static', filename='svg/image-fill.svg') }}" width="16" height="16" alt="FITS Viewer"><span class="ms-1 d-none d-sm-inline">FITS Viewer</span></a>
                             </li>
+                            <li>
+                                <a href="{{ url_for('indi_allsky.longterm_keogram_view') }}" class="dropdown-item">
+                                    <img src="{{ url_for('indi_allsky.static', filename='svg/layout-three-columns.svg') }}" width="16" height="16" alt="Long Term Keogram"><span class="ms-1 d-none d-sm-inline">Long Term Keogram</span></a>
+                            </li>
                             {% endif %}
                         </ul>
                     </li>
