--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2500,7 +2500,9 @@ var camera_id = {{ camera_id }};
             {{ form_config.FFMPEG_VFSCALE(class='form-select bg-secondary') }}
             <div id="FFMPEG_VFSCALE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-6">ffmpeg scaling</div>
+        <div class="col-sm-6">
+            <div><span class="badge rounded-pill bg-danger text-dark">Warning</span> Higher resolution videos may cause timelapses to fail on systems with less than 4GB RAM.  Scale your resolution to reduce the memory requirements.</div>
+        </div>
     </div>
 
     <div class="form-group row">
