--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1341,6 +1341,22 @@ var camera_id = {{ camera_id }};
         </div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_ROTATE_WITH_OFFSET.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.IMAGE_ROTATE_WITH_OFFSET(class='form-check-input') }}
+                <div id="IMAGE_ROTATE_KEEP_SIZE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+            <div>Rotate with Lens center offsets from Location Tab</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Only works with rotation by angle</div>
+        </div>
+    </div>
+
     <hr>
 
     <div class="form-group row">
@@ -7329,6 +7345,7 @@ const checkbox_field_names = [
     'FISH2PANO__FLIP_H',
     'FISH2PANO__ENABLE_CARDINAL_DIRS',
     'IMAGE_ROTATE_KEEP_SIZE',
+    'IMAGE_ROTATE_WITH_OFFSET',
     'IMAGE_EXPORT_FLIP_V',
     'IMAGE_EXPORT_FLIP_H',
     'IMAGE_SAVE_FITS',
