--- a/indi_allsky/flask/templates/longterm_keogram.html
+++ b/indi_allsky/flask/templates/longterm_keogram.html
@@ -123,7 +123,9 @@ function closeFullscreen() {
             {{ form_longterm_keogram.OFFSET_SELECT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-1">
-            <div class="loader" id="loader_generate"></div>
+        </div>
+        <div class="col-sm-2">
+            <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Long-Term-Keogram" class="text-decoration-none link-info" target="_blank">Long Term Keogram Wiki</a></div>
         </div>
     </div>
     <div class="form-group row">
@@ -144,6 +146,9 @@ function closeFullscreen() {
         </div>
         <div class="col-sm-1">
             <button class="btn btn-success">Generate</button>
+        </div>
+        <div class="col-sm-1">
+            <div class="loader" id="loader_generate"></div>
         </div>
     </div>
 </form>
