add resize handler for long term keogram

--- a/indi_allsky/flask/templates/focus.html
+++ b/indi_allsky/flask/templates/focus.html
@@ -217,9 +217,11 @@ function setResizeHandler(callback, timeout) {
 }
 
 function resize_callback() {
-    showImage(json_data['image_b64']);
+    if (json_data['image_b64']) {
+        showImage(json_data['image_b64']);
+    };
 }
-setResizeHandler(resize_callback, 500);
+setResizeHandler(resize_callback, 200);
 
 
 function goFullscreen(elem) {
