--- a/indi_allsky/flask/templates/imageviewer.html
+++ b/indi_allsky/flask/templates/imageviewer.html
@@ -50,9 +50,9 @@ function setResizeHandler(callback, timeout) {
 }
 
 function resize_callback() {
-    //refresh();
+    //img.src = fields['IMG_SELECT'].input.val();
 }
-setResizeHandler(resize_callback, 500);
+setResizeHandler(resize_callback, 200);
 
 
 function goFullscreen(elem) {
