--- a/indi_allsky/flask/templates/fitsimageviewer.html
+++ b/indi_allsky/flask/templates/fitsimageviewer.html
@@ -49,9 +49,9 @@ function setResizeHandler(callback, timeout) {
 }
 
 function resize_callback() {
-    //refresh();
+    img.src = $("#IMG_SELECT").val();
 }
-setResizeHandler(resize_callback, 500);
+setResizeHandler(resize_callback, 200);
 
 
 function goFullscreen(elem) {
