--- a/indi_allsky/flask/templates/index.html
+++ b/indi_allsky/flask/templates/index.html
@@ -119,9 +119,11 @@ function setResizeHandler(callback, timeout) {
 }
 
 function resize_callback() {
-    showImage(json_data['latest_image']);
+    if (json_data['latest_image']) {
+        showImage(json_data['latest_image']);
+    };
 }
-setResizeHandler(resize_callback, 500);
+setResizeHandler(resize_callback, 200);
 
 
 function goFullscreen(elem) {
