--- a/indi_allsky/flask/templates/sqm.html
+++ b/indi_allsky/flask/templates/sqm.html
@@ -203,9 +203,11 @@ function setResizeHandler(callback, timeout) {
 }
 
 function resize_callback() {
-    showImage(json_data['image_list'][0]);
+    if (json_data['image_list'][0]) {
+        showImage(json_data['image_list'][0]);
+    };
 }
-setResizeHandler(resize_callback, 500);
+setResizeHandler(resize_callback, 200);
 
 
 function goFullscreen(elem) {
