--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3706,6 +3706,7 @@ var camera_id = {{ camera_id }};
             <div id="CHARTS__CUSTOM_SLOT_2-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Changing these settings will require a restart/reload</div>
         </div>
     </div>
 
@@ -3770,7 +3771,7 @@ var camera_id = {{ camera_id }};
             </div>
         </div>
         <div class="col-sm-8">
-            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Changing these settings will require a restart</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Changing these settings will require a restart/reload</div>
             <div class="col-sm-8">Enable serving images/videos exclusively from non-local sources (S3, etc)</div>
         </div>
     </div>
