--- a/indi_allsky/flask/templates/chart.html
+++ b/indi_allsky/flask/templates/chart.html
@@ -62,6 +62,10 @@ var json_data = {
 function init() {
     loadChartData();
 
+    setTimeout(function() {
+        $('#chart_note').css({'display' : 'none'});
+    }, 10000);
+
     ctx_sqm = $('#sqm-chart')[0].getContext('2d');
     sqm_chart = new Chart(ctx_sqm, {
         type: "line",
@@ -795,6 +799,8 @@ $( document ).ready(function() {
 </form>
 
 <hr>
+
+<div id="chart_note"><span class="badge rounded-pill bg-info text-dark">Note</span> If you recently changed the custom charts, a restart will be necessary for the new selections to appear</div>
 
 <div class="row">
     <div class="text-center">
